<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/isen" />

            <ImageButton
                android:id="@+id/lifeCycleButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/permissionButton"
                app:layout_constraintHorizontal_bias="0.33"
                app:layout_constraintStart_toStartOf="@+id/permissionButton"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                app:srcCompat="@drawable/reload" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_lifeCylce"
                app:layout_constraintEnd_toEndOf="@+id/lifeCycleButton"
                app:layout_constraintStart_toStartOf="@+id/lifeCycleButton"
                app:layout_constraintTop_toBottomOf="@+id/lifeCycleButton" />

            <ImageButton
                android:id="@+id/saveButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.66"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                app:srcCompat="@drawable/save" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_save"
                app:layout_constraintEnd_toEndOf="@+id/saveButton"
                app:layout_constraintStart_toStartOf="@+id/saveButton"
                app:layout_constraintTop_toBottomOf="@+id/saveButton" />

            <ImageButton
                android:id="@+id/permissionButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorPrimary"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:srcCompat="@drawable/call" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_permission"
                app:layout_constraintEnd_toEndOf="@+id/permissionButton"
                app:layout_constraintStart_toStartOf="@+id/permissionButton"
                app:layout_constraintTop_toBottomOf="@+id/permissionButton" />

            <ImageButton
                android:id="@+id/webserviceButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorPrimary"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.66"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:srcCompat="@drawable/download" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_webservice"
                app:layout_constraintEnd_toEndOf="@+id/webserviceButton"
                app:layout_constraintStart_toStartOf="@+id/webserviceButton"
                app:layout_constraintTop_toBottomOf="@+id/webserviceButton" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>